--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
   "dependencies": {
     "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
+    "json-schema-to-typescript": "^10.1.5",
     "swagger-parser": "^10.0.3",
     "uuid": "^8.3.2"
   }
