--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "axios": "^0.24.0",
     "json-schema-to-typescript": "^10.1.5",
     "swagger-parser": "^10.0.3",
+    "ts-morph": "^13.0.2",
     "uuid": "^8.3.2"
   }
 }
